universe-apps/base/universeapp-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: universeapp-backend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
