universe-apps/base/universeapp-backend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: universeapp-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Download-Options: noopen";
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-XSS-Protection: 1; mode=block";
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - universeapp-backend.local
      secretName: universeapp-backend-tls
  rules:
    - host: universeapp-backend.local
      http:
        paths:
          - path: /
            backend:
              serviceName: universeapp-backend
              servicePort: http
